--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,21 @@
-tmp/*
-[Cc]onfig/core.php
-[Cc]onfig/database.php
-app/tmp/*
-app/[Cc]onfig/core.php
-app/[Cc]onfig/database.php
-!empty
+# User specific & automatically generated files #
+#################################################
+/app/Config/database.php
+/app/tmp
+/lib/Cake/Console/Templates/skel/tmp/
+/plugins
+/vendors
+/build
+/dist
+/tags
 
-# Test URI
-# Ignore netbeans folder
-nbproject/*
-
-# Ignore private folder
-/app/private/*
-!/app/private/empty
-
-# Ignore packed asset files
-/app/webroot/css/packed/*
-!app/webroot/css/packed/.htaccess
-/app/webroot/js/packed/*
-!app/webroot/js/packed/.htaccess
-
-# MAC
+# OS generated files #
+######################
 .DS_Store
-
-# Windows
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
 Thumbs.db
-
-# Eclipse project files
-/.cache
-.project
-/.settings
-.buildpath
-
-# Cake TMP Dirs
-/app/tmp/*
-!/app/tmp/
-
-/app/tmp/cache/*
-!/app/tmp/cache/
-!/app/tmp/cache/empty
-
-/app/tmp/cache/models/*
-!/app/tmp/cache/models/
-!/app/tmp/cache/models/empty
-
-/app/tmp/cache/persistent/*
-!/app/tmp/cache/persistent/
-!/app/tmp/cache/persistent/empty
-
-/app/tmp/cache/views/*
-!/app/tmp/cache/views/
-!/app/tmp/cache/views/empty
-
-/app/tmp/logs/*
-!/app/tmp/logs/
-!/app/tmp/logs/empty
-
-/app/tmp/sessions/*
-!/app/tmp/sessions/
-!/app/tmp/sessions/empty
-
-/app/tmp/tests/*
-!/app/tmp/tests/
-!/app/tmp/tests/empty
